Preparing handle categories features (Add Category to nav_drawer)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,8 +25,8 @@
 
     <!-- CardView -->
 
-    <!-- Categories Theme Dark -->
+    <!-- Category Theme Dark -->
 
-    <!-- Categories Theme Light -->
+    <!-- Category Theme Light -->
 
 </resources>
