--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!-- Light Theme Colors -->
+    <color name="lightPrimary">#F5F5F5</color>
+    <color name="lightPrimaryDark">#512DA8</color>
+    <color name="lightAccent">@color/deepPurple500</color>
+
+    <color name="lightBackground">@color/lightPrimary</color>
+
+        <!-- Dark Theme Colors -->
+    <color name="darkPrimary">#212121</color>
+    <color name="darkPrimaryDark">#0097A7</color>
+    <color name="darkAccent">@color/cyan500</color>
+
+    <color name="darkBackground">@color/darkPrimary</color>
+
+        <!-- Orange Theme Colors -->
+    <color name="orangePrimary">@color/orange500</color>
+    <color name="orangePrimaryDark">@color/orange700</color>
+    <color name="orangeAccent">@color/redA200</color>
+
+    <color name="orangeBackground">@color/orange100</color>
+
+
+    <item name="card_light" type="color">#FFFFFF</item>
+    <item name="card_dark" type="color">#424242</item>
+
+
+    <color name="white">#FFFFFF</color>
+    <color name="blackT87">#DE000000</color>
+    <color name="blackT12">#1F000000</color>
+    <color name="grey100">#F5F5F5</color>
+    <color name="grey500">#9E9E9E</color>
+    <color name="grey800">#424242</color>
+    <color name="grey900">#212121</color>
+
+    <color name="red500">#F44336</color>
+    <color name="redA100">#FF8A80</color>
+    <color name="redA200">#FF5252</color>
+    <color name="pink500">#E91E63</color>
+    <color name="purple500">#9C27B0</color>
+    <color name="deepPurple500">#673AB7</color>
+    <color name="indigo500">#3F51B5</color>
+    <color name="blue500">#2196f3</color>
+    <color name="lightBlue500">#03A9F4</color>
+    <color name="lightBlueA700">#0091EA</color>
+    <color name="cyan500">#00BCD4</color>
+    <color name="teal50">#E0F2F1</color>
+    <color name="teal100">#B2DFDB</color>
+    <color name="teal500">#009688</color>
+    <color name="teal900">#004D40</color>
+    <color name="green500">#4CAF50</color>
+    <color name="greenA700">#00C853</color>
+    <color name="orange50">#FFF3E0</color>
+    <color name="orange100">#FFE0B2</color>
+    <color name="orange300">#FFB74D</color>
+    <color name="orange500">#FF9800</color>
+    <color name="orange700">#F57C00</color>
+    <color name="brown300">#A1887F</color>
+    <color name="brown500">#795548</color>
 </resources>
