--- a/app/src/main/res/layout/fragment_series_list.xml
+++ b/app/src/main/res/layout/fragment_series_list.xml
@@ -6,7 +6,35 @@
     tools:context=".activities.MainActivity">
 
     <include
+        android:id="@+id/include"
         layout="@layout/item_serie_s_chap_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <include
+        android:id="@+id/include2"
+        layout="@layout/item_serie_chap_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/include" />
+
+    <include
+        android:id="@+id/include3"
+        layout="@layout/item_serie_s_chap_noimg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/include2" />
+
+    <include
+        layout="@layout/item_serie_chap_noimg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/include3"
+        android:layout_centerVertical="true" />
 </RelativeLayout>
