--- a/app/src/main/res/layout/item_serie_s_chap_noimg.xml
+++ b/app/src/main/res/layout/item_serie_s_chap_noimg.xml
@@ -9,22 +9,72 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_height="wrap_content">
+
+
+        <TextView
+            android:id="@+id/textTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:text="The Walking Dead"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?attr/colorAccent" />
+
+        <com.vi.swipenumberpicker.SwipeNumberPicker
+            android:id="@+id/picker_season"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/textView2"
+            android:layout_alignStart="@+id/textView2"
+            android:layout_below="@+id/textView2"
+            android:layout_marginBottom="16dp"
+            app:snp_arrowColor="@android:color/white"
+            app:snp_backgroundColor="?attr/colorAccent"
+            app:snp_max="100"
+            app:snp_min="0"
+            app:snp_numberColor="@android:color/white" />
 
         <com.vi.swipenumberpicker.SwipeNumberPicker
             android:id="@+id/picker_chapter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_toRightOf="@+id/picker_season"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/textView3"
+            android:layout_marginRight="16dp"
             app:snp_arrowColor="@android:color/white"
-            app:snp_backgroundColor="@color/colorAccent"
+            app:snp_backgroundColor="?attr/colorAccent"
             app:snp_max="1000"
-            app:snp_min="50"
-            app:snp_numberColor="@android:color/white"
-            app:snp_value="95" />
+            app:snp_min="0"
+            app:snp_numberColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/picker_chapter"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/season"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/picker_chapter"
+            android:layout_alignRight="@+id/picker_chapter"
+            android:layout_below="@+id/textTitle"
+            android:text="@string/chapter"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </RelativeLayout>
 
