--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,14 +7,19 @@
 
     <color name="lightBackground">@color/lightPrimary</color>
 
-        <!-- Dark Theme Colors -->
+    <!-- Dark Theme Colors -->
     <color name="darkPrimary">#212121</color>
     <color name="darkPrimaryDark">#0097A7</color>
     <color name="darkAccent">@color/cyan500</color>
 
     <color name="darkBackground">@color/darkPrimary</color>
 
-        <!-- Orange Theme Colors -->
+    <!-- Green Theme Colors -->
+    <color name="greenPrimary">#212121</color>
+    <color name="greenPrimaryDark">#8BC34A</color>
+    <color name="greenAccent">#8BC34A</color>
+
+    <color name="greenBackground">@color/greenPrimary</color>
 
     <!-- CardView Colors -->
     <item name="card_light" type="color">#FFFFFF</item>
@@ -47,7 +52,7 @@
     <color name="material_drawer_dark_divider">#1FFFFFFF</color>
     <!-- MaterialDrawer DEFAULT DARK drawer colors -->
     <color name="material_drawer_dark_selected">#202020</color>
-    <color name="material_drawer_dark_selected_text">@color/darkAccent</color>
+    <color name="material_drawer_dark_selected_text">#26A69A</color>
     <color name="material_drawer_dark_header_selection_text">#FFF</color>
 
 
