--- a/app/src/main/res/layout/fragment_series_list.xml
+++ b/app/src/main/res/layout/fragment_series_list.xml
@@ -5,36 +5,54 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/item_serie_s_chap_img"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/add_button" />
 
-    <include
-        android:id="@+id/include2"
-        layout="@layout/item_serie_chap_img"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/add_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/include" />
+        android:text="@string/add_serie" />
+    <!--
+        <include
+            android:id="@+id/include"
+            layout="@layout/item_serie_s_chap_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <include
-        android:id="@+id/include3"
-        layout="@layout/item_serie_s_chap_noimg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/include2" />
+        <include
+            android:id="@+id/include2"
+            layout="@layout/item_serie_chap_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/include" />
 
-    <include
-        layout="@layout/item_serie_chap_noimg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/include3"
-        android:layout_centerVertical="true" />
+        <include
+            android:id="@+id/include3"
+            layout="@layout/item_serie_s_chap_noimg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/include2" />
+
+        <include
+            layout="@layout/item_serie_chap_noimg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/include3"
+            android:layout_centerVertical="true" />
+    -->
 </RelativeLayout>
