--- a/app/src/main/res/layout/fragment_series_list.xml
+++ b/app/src/main/res/layout/fragment_series_list.xml
@@ -11,16 +11,16 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/add_button" />
 
-    <Button
+    <ImageButton
         android:id="@+id/add_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
-        android:text="@string/add_serie" />
+        android:backgroundTint="?attr/backgroundColor"
+        android:elevation="5dp"
+        android:src="?attr/drawable_add" />
     <!--
         <include
             android:id="@+id/include"
