--- a/app/src/main/res/layout/dialog_add_serie.xml
+++ b/app/src/main/res/layout/dialog_add_serie.xml
@@ -17,4 +17,14 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <!-- Spinner para categorias -->
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/input_layout_seriename"
+        android:layout_marginTop="10dp"></Spinner>
+
 </RelativeLayout>
