--- a/app/src/main/res/layout/dialog_add_serie.xml
+++ b/app/src/main/res/layout/dialog_add_serie.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/show_season_checkbox"
         android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:layout_toEndOf="@+id/text_season"
         android:layout_toRightOf="@+id/text_season"
         android:text="@string/chapter"
@@ -52,6 +53,7 @@
         android:layout_alignRight="@+id/text_chapter"
         android:layout_alignStart="@+id/text_chapter"
         android:layout_below="@+id/text_chapter"
+        android:gravity="center"
         android:hint="0"
         android:inputType="number" />
 
@@ -64,6 +66,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/show_season_checkbox"
         android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
         android:text="@string/season"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:visibility="gone" />
@@ -76,6 +79,8 @@
         android:layout_alignStart="@+id/text_season"
         android:layout_below="@+id/text_season"
         android:layout_toLeftOf="@+id/text_chapter"
+        android:layout_toStartOf="@+id/text_chapter"
+        android:gravity="center"
         android:hint="0"
         android:inputType="number"
         android:visibility="gone" />
