--- a/app/src/main/res/layout/item_serie_s_chap_noimg.xml
+++ b/app/src/main/res/layout/item_serie_s_chap_noimg.xml
@@ -20,8 +20,8 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="The Walking Dead"
-            android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="?attr/colorAccent" />
 
@@ -32,27 +32,22 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textTitle"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/picker_chapter"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_marginBottom="2dp"
+                android:gravity="center"
                 android:text="@string/season"
-                android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <com.vi.swipenumberpicker.SwipeNumberPicker
                 android:id="@+id/picker_season"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/textView2"
-                android:layout_alignStart="@+id/textView2"
-                android:layout_below="@+id/textView2"
                 android:layout_marginBottom="16dp"
                 app:snp_arrowColor="@android:color/white"
                 app:snp_backgroundColor="?attr/colorAccent"
@@ -67,6 +62,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/textTitle"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:orientation="vertical">
 
@@ -74,21 +70,15 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/picker_chapter"
-                android:layout_alignRight="@+id/picker_chapter"
-                android:layout_below="@+id/textTitle"
                 android:layout_marginBottom="2dp"
+                android:gravity="center"
                 android:text="@string/chapter"
-                android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <com.vi.swipenumberpicker.SwipeNumberPicker
                 android:id="@+id/picker_chapter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_below="@+id/textView3"
                 app:snp_arrowColor="@android:color/white"
                 app:snp_backgroundColor="?attr/colorAccent"
                 app:snp_max="1000"
